# choreo

./: .gitattributes  .gitignore  LOG.md  README.md  README_DYMASK.md  SUMMARY.md  TODO.md  pyproject.toml  run_tests.sh  type_check.sh
data/prompts/: mad_desc.md  mas_eval.md  tot_desc.md
dumps/: checkpoint-0_solution_quality.json  checkpoint-199_e2e.json  checkpoint-199_solution_quality.json  checkpoint-299_solution_quality.json  checkpoint-399_solution_quality.json  checkpoint-99_e2e.json  checkpoint-99_solution_quality.json  math_baseline_direct_test.json  sequential_dev_n2.md  trick_results_checkpoint_199.json  trick_results_checkpoint_299.json  trick_results_checkpoint_399.json  trick_results_checkpoint_99.json  trick_results_teacher_forced.json
dumps/bsm/: baseline_e2e.json  initial_eval.json  postft_eval.json  preft_eval.json
dumps/mad/: baseline.candidates  cached.references  (+10 more)
examples/: bench.ipynb  bsm.ipynb  direct.ipynb  dymask.ipynb  example.ipynb  example_simple_parallel.py  finetune_tot.ipynb  mad.ipynb  madpar.ipynb  mcqa.ipynb  prisoners.ipynb  qa.ipynb  tot.ipynb
llama/: __init__.py  generation.py  model.py  test_workflow.py  tokenizer.py  util.py  workflow.py
repl/: bsm_repl.py  mad_repl.py  madpar_repl.py  prisoners_repl.py  repl.py  simple_repl.py  tot_repl.py
slurm/: collect_data.py  finetune_tot.py  gen.sh  math_e2e.py  prisoners_baseline.py  prisoners_cached.py  sol_quality.py  sweep_tot.sh  untrained_sol_quality.py
sweep/: bsm.yml  qa_mixed.yml  tot.yml
sweeps/: tot.yml
tests/: test_integration.py  test_rotate.py  test_workflow.py
(+3912 files in other folders)
