[project]
name = "llama3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blobfile>=3.0.0",
    "fairscale>=0.4.13",
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "llama-stack>=0.0.63",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
]
