[project]
name = "llama3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blobfile>=3.0.0",
    "datasets>=3.4.1",
    "fairscale>=0.4.13",
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "llama-stack>=0.0.63",
    "matplotlib>=3.10.0",
    "openai>=1.66.3",
    "rpy2>=3.5.17",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "unbabel-comet>=2.2.4",
    "wandb>=0.19.5",
]
[tool.setuptools]
packages = ["llama"]
